# libchess

./: .gitignore  Cargo.toml  README.md
proptest-regressions/: test.txt
src/: board.rs  lib.rs  test.rs
