[package]
name = "libchess"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", default-features = false }
bstr = { version = "1.12.0", default-features = false }
bytecount = "0.6.9"
smallvec = { version = "1.15.1", features = ["union", "const_generics"] }

[features]
default = ["alloc", "pgn"]
alloc = ["bstr/alloc"]

[dev-dependencies]
proptest = "1.7.0"
proptest-derive = "0.6.0"
